--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Starter project",
   "main": "app.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development --watch",
     "build": "webpack --mode production"
@@ -21,10 +21,10 @@
   },
   "homepage": "https://github.com/pavitaj/bootstrap4-starter-webpack#readme",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
     "autoprefixer": "^8.6.5",
-    "babel-loader": "^8.0.4",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
     "mini-css-extract-plugin": "^0.4.1",
@@ -32,12 +32,13 @@
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.1.0",
     "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.4",
+    "slick-carousel": "^1.8.1"
   }
 }
