--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
   },
   "homepage": "https://github.com/pavitaj/bootstrap4-starter-webpack#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^8.6.5",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.0.0",
     "css-loader": "^0.28.11",
     "exports-loader": "^0.7.0",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.9.3",
     "postcss-loader": "^2.1.6",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "@babel/cli": "^7.8.4",
     "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
