--- a/package.json
+++ b/package.json
@@ -21,25 +21,25 @@
   },
   "homepage": "https://github.com/pavitaj/bootstrap4-starter-webpack#readme",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "autoprefixer": "^8.6.5",
     "babel-loader": "^8.0.0",
-    "css-loader": "^0.28.11",
+    "css-loader": "^3.4.2",
     "exports-loader": "^0.7.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.9.3",
-    "postcss-loader": "^2.1.6",
-    "sass-loader": "^7.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.4",
-    "slick-carousel": "^1.8.1",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "slick-carousel": "^1.8.1"
   }
 }
